// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑 glow：数字源/目标纹理包装 1`] = `
"{"width":4097,"height":2161,"scratch":[{"width":4097,"height":2161},{"width":4097,"height":2161},{"width":2049,"height":1081},{"width":1025,"height":541},{"width":513,"height":271},{"width":257,"height":136},{"width":129,"height":68},{"width":129,"height":68},{"width":129,"height":68}]}
{"entry":"glow_extract","source":"input","target":0,"uniforms":[4097,2161,4097,2161,0.5400000214576721,0.10000000149011612,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":2,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[1025,541,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[513,271,1025,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":5,"uniforms":[257,136,513,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":6,"uniforms":[129,68,257,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":7,"uniforms":[129,68,129,68,0.007751937955617905,0,2.6545872688293457,8,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":8,"uniforms":[129,68,129,68,0,0.014705882407724857,2.6545872688293457,8,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":1,"uniforms":[4097,2161,129,68,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"glow_add","source":1,"target":"output","uniforms":[4097,2161,4097,2161,1,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑 sharpen：数字源/目标纹理包装 1`] = `
"{"width":4097,"height":2161,"scratch":[{"width":4097,"height":2161},{"width":2049,"height":1081},{"width":2049,"height":1081},{"width":2049,"height":1081}]}
{"entry":"copy","source":"input","target":1,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":1,"target":2,"uniforms":[2049,1081,2049,1081,0.00048804294783622026,0,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":2,"target":3,"uniforms":[2049,1081,2049,1081,0,0.0009250693838112056,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":0,"uniforms":[4097,2161,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":0,"target":"output","uniforms":[4097,2161,4097,2161,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=0 1`] = `
"{"width":1001,"height":1000,"scratch":[]}
{"entry":"copy","source":"input","target":"output","uniforms":[1001,1000,1001,1000,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=0.001 1`] = `
"{"width":1001,"height":1000,"scratch":[]}
{"entry":"copy","source":"input","target":"output","uniforms":[1001,1000,1001,1000,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=0.9 1`] = `
"{"width":1001,"height":1000,"scratch":[]}
{"entry":"copy","source":"input","target":"output","uniforms":[1001,1000,1001,1000,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=1 1`] = `
"{"width":1001,"height":1000,"scratch":[{"width":1001,"height":1000}]}
{"entry":"blur","source":"input","target":0,"uniforms":[1001,1000,1001,1000,0.0009990009712055326,0,0.30000001192092896,1,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[1001,1000,1001,1000,0,0.0010000000474974513,0.30000001192092896,1,1,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=10 1`] = `
"{"width":1001,"height":1000,"scratch":[{"width":1001,"height":1000}]}
{"entry":"blur","source":"input","target":0,"uniforms":[1001,1000,1001,1000,0.0009990009712055326,0,3,9,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[1001,1000,1001,1000,0,0.0010000000474974513,3,9,1,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑极小 sigma/直接滤波阈值：strength=10.001 1`] = `
"{"width":1001,"height":1000,"scratch":[{"width":501,"height":500},{"width":501,"height":500},{"width":501,"height":500}]}
{"entry":"copy","source":"input","target":0,"uniforms":[501,500,1001,1000,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":1,"uniforms":[501,500,501,500,0.0019960079807788134,0,1.4217184782028198,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":1,"target":2,"uniforms":[501,500,501,500,0,0.0020000000949949026,1.4217184782028198,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":"output","uniforms":[1001,1000,501,500,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1×1：repeatEdges=false 1`] = `
"{"width":1,"height":1,"scratch":[]}
{"entry":"copy","source":"input","target":"output","uniforms":[1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1×1：repeatEdges=true 1`] = `
"{"width":1,"height":1,"scratch":[]}
{"entry":"copy","source":"input","target":"output","uniforms":[1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 15×17：repeatEdges=false 1`] = `
"{"width":15,"height":17,"scratch":[{"width":15,"height":17}]}
{"entry":"blur","source":"input","target":0,"uniforms":[15,17,15,17,0.06666667014360428,0,0.5099999904632568,2,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[15,17,15,17,0,0.05882352963089943,0.5099999904632568,2,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 15×17：repeatEdges=true 1`] = `
"{"width":15,"height":17,"scratch":[{"width":15,"height":17}]}
{"entry":"blur","source":"input","target":0,"uniforms":[15,17,15,17,0.06666667014360428,0,0.5099999904632568,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[15,17,15,17,0,0.05882352963089943,0.5099999904632568,2,1,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 15×2161：repeatEdges=false 1`] = `
"{"width":15,"height":2161,"scratch":[{"width":15,"height":1081},{"width":15,"height":541},{"width":15,"height":271},{"width":15,"height":136},{"width":15,"height":68},{"width":15,"height":68},{"width":15,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[15,1081,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[15,541,15,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[15,271,15,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[15,136,15,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[15,68,15,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[15,68,15,68,0.06666667014360428,0,64.83000183105469,32,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[15,68,15,68,0,0.014705882407724857,1.9632891416549683,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":"output","uniforms":[15,2161,15,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 15×2161：repeatEdges=true 1`] = `
"{"width":15,"height":2161,"scratch":[{"width":15,"height":1081},{"width":15,"height":541},{"width":15,"height":271},{"width":15,"height":136},{"width":15,"height":68},{"width":15,"height":68},{"width":15,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[15,1081,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[15,541,15,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[15,271,15,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[15,136,15,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[15,68,15,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[15,68,15,68,0.06666667014360428,0,64.83000183105469,32,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[15,68,15,68,0,0.014705882407724857,1.9632891416549683,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":"output","uniforms":[15,2161,15,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 17×19：repeatEdges=false 1`] = `
"{"width":17,"height":19,"scratch":[{"width":17,"height":19}]}
{"entry":"blur","source":"input","target":0,"uniforms":[17,19,17,19,0.05882352963089943,0,0.5699999928474426,2,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[17,19,17,19,0,0.05263157933950424,0.5699999928474426,2,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 17×19：repeatEdges=true 1`] = `
"{"width":17,"height":19,"scratch":[{"width":17,"height":19}]}
{"entry":"blur","source":"input","target":0,"uniforms":[17,19,17,19,0.05882352963089943,0,0.5699999928474426,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":0,"target":"output","uniforms":[17,19,17,19,0,0.05263157933950424,0.5699999928474426,2,1,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1920×1080：repeatEdges=false 1`] = `
"{"width":1920,"height":1080,"scratch":[{"width":960,"height":540},{"width":480,"height":270},{"width":240,"height":135},{"width":120,"height":68},{"width":120,"height":68},{"width":120,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[960,540,1920,1080,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[480,270,960,540,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[240,135,480,270,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[120,68,240,135,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[120,68,120,68,0.008333333767950535,0,1.9623838663101196,6,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[120,68,120,68,0,0.014705882407724857,1.9623838663101196,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":"output","uniforms":[1920,1080,120,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1920×1080：repeatEdges=true 1`] = `
"{"width":1920,"height":1080,"scratch":[{"width":960,"height":540},{"width":480,"height":270},{"width":240,"height":135},{"width":120,"height":68},{"width":120,"height":68},{"width":120,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[960,540,1920,1080,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[480,270,960,540,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[240,135,480,270,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[120,68,240,135,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[120,68,120,68,0.008333333767950535,0,1.9623838663101196,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[120,68,120,68,0,0.014705882407724857,1.9623838663101196,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":"output","uniforms":[1920,1080,120,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1921×1081：repeatEdges=false 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":"output","uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 1921×1081：repeatEdges=true 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":"output","uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 4097×2161：repeatEdges=false 1`] = `
"{"width":4097,"height":2161,"scratch":[{"width":2049,"height":1081},{"width":1025,"height":541},{"width":513,"height":271},{"width":257,"height":136},{"width":129,"height":68},{"width":129,"height":68},{"width":129,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[1025,541,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[513,271,1025,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[257,136,513,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[129,68,257,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[129,68,129,68,0.007751937955617905,0,1.9632891416549683,6,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[129,68,129,68,0,0.014705882407724857,1.9632891416549683,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":"output","uniforms":[4097,2161,129,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 4097×2161：repeatEdges=true 1`] = `
"{"width":4097,"height":2161,"scratch":[{"width":2049,"height":1081},{"width":1025,"height":541},{"width":513,"height":271},{"width":257,"height":136},{"width":129,"height":68},{"width":129,"height":68},{"width":129,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[1025,541,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[513,271,1025,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[257,136,513,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[129,68,257,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[129,68,129,68,0.007751937955617905,0,1.9632891416549683,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[129,68,129,68,0,0.014705882407724857,1.9632891416549683,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":"output","uniforms":[4097,2161,129,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 65537×32769：repeatEdges=false 1`] = `
"{"width":65537,"height":32769,"scratch":[{"width":32769,"height":16385},{"width":16385,"height":8193},{"width":8193,"height":4097},{"width":4097,"height":2049},{"width":2049,"height":1025},{"width":1025,"height":513},{"width":513,"height":257},{"width":513,"height":257},{"width":513,"height":257}]}
{"entry":"copy","source":"input","target":0,"uniforms":[32769,16385,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[16385,8193,32769,16385,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[8193,4097,16385,8193,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[4097,2049,8193,4097,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[2049,1025,4097,2049,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":5,"uniforms":[1025,513,2049,1025,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":6,"uniforms":[513,257,1025,513,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":7,"uniforms":[513,257,513,257,0.001949317753314972,0,7.663941860198975,23,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":8,"uniforms":[513,257,513,257,0,0.0038910505827516317,7.663941860198975,23,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":"output","uniforms":[65537,32769,513,257,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 剪辑高斯 65537×32769：repeatEdges=true 1`] = `
"{"width":65537,"height":32769,"scratch":[{"width":32769,"height":16385},{"width":16385,"height":8193},{"width":8193,"height":4097},{"width":4097,"height":2049},{"width":2049,"height":1025},{"width":1025,"height":513},{"width":513,"height":257},{"width":513,"height":257},{"width":513,"height":257}]}
{"entry":"copy","source":"input","target":0,"uniforms":[32769,16385,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[16385,8193,32769,16385,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[8193,4097,16385,8193,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[4097,2049,8193,4097,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[2049,1025,4097,2049,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":5,"uniforms":[1025,513,2049,1025,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":6,"uniforms":[513,257,1025,513,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":7,"uniforms":[513,257,513,257,0.001949317753314972,0,7.663941860198975,23,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":8,"uniforms":[513,257,513,257,0,0.0038910505827516317,7.663941860198975,23,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":"output","uniforms":[65537,32769,513,257,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 1×1：锐化、键控清理及局部锐化 1`] = `
"{"width":1,"height":1,"scratch":[{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1},{"width":1,"height":1}]}
{"entry":"blur","source":"input","target":3,"uniforms":[1,1,1,1,1,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":2,"uniforms":[1,1,1,1,0,1,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[1,1,1,1,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":4,"uniforms":[1,1,1,1,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[1,1,1,1,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":4}
{"entry":"color_grade_linear","source":1,"target":5,"uniforms":[1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":7,"uniforms":[1,1,1,1,1,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":6,"uniforms":[1,1,1,1,0,1,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":6,"target":0,"uniforms":[1,1,1,1,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":4}
{"entry":"copy","source":0,"target":"output","uniforms":[1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 15×17：锐化、键控清理及局部锐化 1`] = `
"{"width":15,"height":17,"scratch":[{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17},{"width":15,"height":17}]}
{"entry":"blur","source":"input","target":3,"uniforms":[15,17,15,17,0.06666667014360428,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":2,"uniforms":[15,17,15,17,0,0.05882352963089943,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[15,17,15,17,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":4,"uniforms":[15,17,15,17,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"blur","source":4,"target":6,"uniforms":[15,17,15,17,0.06666667014360428,0,0.3404247462749481,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":5,"uniforms":[15,17,15,17,0,0.05882352963089943,0.3404247462749481,2,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[15,17,15,17,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":5}
{"entry":"color_grade_linear","source":1,"target":7,"uniforms":[15,17,15,17,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":9,"uniforms":[15,17,15,17,0.06666667014360428,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":9,"target":8,"uniforms":[15,17,15,17,0,0.05882352963089943,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":8,"target":0,"uniforms":[15,17,15,17,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":5}
{"entry":"copy","source":0,"target":"output","uniforms":[15,17,15,17,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 15×2161：锐化、键控清理及局部锐化 1`] = `
"{"width":15,"height":2161,"scratch":[{"width":15,"height":2161},{"width":15,"height":2161},{"width":15,"height":2161},{"width":15,"height":1081},{"width":15,"height":1081},{"width":15,"height":1081},{"width":15,"height":2161},{"width":15,"height":2161},{"width":15,"height":1081},{"width":15,"height":541},{"width":15,"height":271},{"width":15,"height":136},{"width":15,"height":136},{"width":15,"height":136},{"width":15,"height":2161},{"width":15,"height":2161},{"width":15,"height":1081},{"width":15,"height":1081},{"width":15,"height":1081}]}
{"entry":"copy","source":"input","target":3,"uniforms":[15,1081,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[15,1081,15,1081,0.06666667014360428,0,3.241499900817871,10,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[15,1081,15,1081,0,0.0009250693838112056,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":2,"uniforms":[15,2161,15,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[15,2161,15,2161,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":6,"uniforms":[15,2161,15,2161,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"copy","source":6,"target":8,"uniforms":[15,1081,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":9,"uniforms":[15,541,15,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":9,"target":10,"uniforms":[15,271,15,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":10,"target":11,"uniforms":[15,136,15,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":11,"target":12,"uniforms":[15,136,15,136,0.06666667014360428,0,43.273990631103516,32,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":12,"target":13,"uniforms":[15,136,15,136,0,0.007352941203862429,2.658066749572754,8,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":13,"target":7,"uniforms":[15,2161,15,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[15,2161,15,2161,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":7}
{"entry":"color_grade_linear","source":1,"target":14,"uniforms":[15,2161,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":14,"target":16,"uniforms":[15,1081,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":16,"target":17,"uniforms":[15,1081,15,1081,0.06666667014360428,0,3.241499900817871,10,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":17,"target":18,"uniforms":[15,1081,15,1081,0,0.0009250693838112056,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":18,"target":15,"uniforms":[15,2161,15,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":15,"target":0,"uniforms":[15,2161,15,2161,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":7}
{"entry":"copy","source":0,"target":"output","uniforms":[15,2161,15,2161,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 17×19：锐化、键控清理及局部锐化 1`] = `
"{"width":17,"height":19,"scratch":[{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19},{"width":17,"height":19}]}
{"entry":"blur","source":"input","target":3,"uniforms":[17,19,17,19,0.05882352963089943,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":2,"uniforms":[17,19,17,19,0,0.05263157933950424,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[17,19,17,19,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":4,"uniforms":[17,19,17,19,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"blur","source":4,"target":6,"uniforms":[17,19,17,19,0.05882352963089943,0,0.380474716424942,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":5,"uniforms":[17,19,17,19,0,0.05263157933950424,0.380474716424942,2,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[17,19,17,19,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":5}
{"entry":"color_grade_linear","source":1,"target":7,"uniforms":[17,19,17,19,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":9,"uniforms":[17,19,17,19,0.05882352963089943,0,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":9,"target":8,"uniforms":[17,19,17,19,0,0.05263157933950424,0.6000000238418579,2,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":8,"target":0,"uniforms":[17,19,17,19,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":5}
{"entry":"copy","source":0,"target":"output","uniforms":[17,19,17,19,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 1920×1080：锐化、键控清理及局部锐化 1`] = `
"{"width":1920,"height":1080,"scratch":[{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":960,"height":540},{"width":480,"height":270},{"width":240,"height":135},{"width":240,"height":135},{"width":240,"height":135},{"width":1920,"height":1080},{"width":1920,"height":1080},{"width":1920,"height":1080}]}
{"entry":"blur","source":"input","target":3,"uniforms":[1920,1080,1920,1080,0.0005208333604969084,0,1.6200000047683716,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":2,"uniforms":[1920,1080,1920,1080,0,0.0009259259095415473,1.6200000047683716,5,1,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[1920,1080,1920,1080,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":4,"uniforms":[1920,1080,1920,1080,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"copy","source":4,"target":6,"uniforms":[960,540,1920,1080,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":7,"uniforms":[480,270,960,540,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":7,"target":8,"uniforms":[240,135,480,270,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":8,"target":9,"uniforms":[240,135,240,135,0.004166666883975267,0,2.6569769382476807,8,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":9,"target":10,"uniforms":[240,135,240,135,0,0.007407407276332378,2.6569769382476807,8,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":10,"target":5,"uniforms":[1920,1080,240,135,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[1920,1080,1920,1080,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":5}
{"entry":"color_grade_linear","source":1,"target":11,"uniforms":[1920,1080,1920,1080,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":11,"target":13,"uniforms":[1920,1080,1920,1080,0.0005208333604969084,0,1.6200000047683716,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":13,"target":12,"uniforms":[1920,1080,1920,1080,0,0.0009259259095415473,1.6200000047683716,5,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":12,"target":0,"uniforms":[1920,1080,1920,1080,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":5}
{"entry":"copy","source":0,"target":"output","uniforms":[1920,1080,1920,1080,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 1921×1081：锐化、键控清理及局部锐化 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":241,"height":136},{"width":241,"height":136},{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":1921,"height":1081}]}
{"entry":"blur","source":"input","target":3,"uniforms":[1921,1081,1921,1081,0.0005205622292123735,0,1.621500015258789,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":2,"uniforms":[1921,1081,1921,1081,0,0.0009250693838112056,1.621500015258789,5,1,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[1921,1081,1921,1081,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":4,"uniforms":[1921,1081,1921,1081,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"copy","source":4,"target":6,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":7,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":7,"target":8,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":8,"target":9,"uniforms":[241,136,241,136,0.004149377811700106,0,2.6595239639282227,8,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":9,"target":10,"uniforms":[241,136,241,136,0,0.007352941203862429,2.6595239639282227,8,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":10,"target":5,"uniforms":[1921,1081,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[1921,1081,1921,1081,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":5}
{"entry":"color_grade_linear","source":1,"target":11,"uniforms":[1921,1081,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":11,"target":13,"uniforms":[1921,1081,1921,1081,0.0005205622292123735,0,1.621500015258789,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":13,"target":12,"uniforms":[1921,1081,1921,1081,0,0.0009250693838112056,1.621500015258789,5,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":12,"target":0,"uniforms":[1921,1081,1921,1081,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":5}
{"entry":"copy","source":0,"target":"output","uniforms":[1921,1081,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 4097×2161：锐化、键控清理及局部锐化 1`] = `
"{"width":4097,"height":2161,"scratch":[{"width":4097,"height":2161},{"width":4097,"height":2161},{"width":4097,"height":2161},{"width":2049,"height":1081},{"width":2049,"height":1081},{"width":2049,"height":1081},{"width":4097,"height":2161},{"width":4097,"height":2161},{"width":2049,"height":1081},{"width":1025,"height":541},{"width":513,"height":271},{"width":257,"height":136},{"width":257,"height":136},{"width":257,"height":136},{"width":4097,"height":2161},{"width":4097,"height":2161},{"width":2049,"height":1081},{"width":2049,"height":1081},{"width":2049,"height":1081}]}
{"entry":"copy","source":"input","target":3,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[2049,1081,2049,1081,0.00048804294783622026,0,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[2049,1081,2049,1081,0,0.0009250693838112056,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":2,"uniforms":[4097,2161,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[4097,2161,4097,2161,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":6,"uniforms":[4097,2161,4097,2161,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"copy","source":6,"target":8,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":9,"uniforms":[1025,541,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":9,"target":10,"uniforms":[513,271,1025,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":10,"target":11,"uniforms":[257,136,513,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":11,"target":12,"uniforms":[257,136,257,136,0.0038910505827516317,0,2.658066749572754,8,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":12,"target":13,"uniforms":[257,136,257,136,0,0.007352941203862429,2.658066749572754,8,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":13,"target":7,"uniforms":[4097,2161,257,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[4097,2161,4097,2161,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":7}
{"entry":"color_grade_linear","source":1,"target":14,"uniforms":[4097,2161,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":14,"target":16,"uniforms":[2049,1081,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":16,"target":17,"uniforms":[2049,1081,2049,1081,0.00048804294783622026,0,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":17,"target":18,"uniforms":[2049,1081,2049,1081,0,0.0009250693838112056,1.5484391450881958,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":18,"target":15,"uniforms":[4097,2161,2049,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":15,"target":0,"uniforms":[4097,2161,4097,2161,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":7}
{"entry":"copy","source":0,"target":"output","uniforms":[4097,2161,4097,2161,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片调整 65537×32769：锐化、键控清理及局部锐化 1`] = `
"{"width":65537,"height":32769,"scratch":[{"width":65537,"height":32769},{"width":65537,"height":32769},{"width":65537,"height":32769},{"width":32769,"height":16385},{"width":16385,"height":8193},{"width":8193,"height":4097},{"width":4097,"height":2049},{"width":2049,"height":1025},{"width":2049,"height":1025},{"width":2049,"height":1025},{"width":65537,"height":32769},{"width":65537,"height":32769},{"width":32769,"height":16385},{"width":16385,"height":8193},{"width":8193,"height":4097},{"width":4097,"height":2049},{"width":2049,"height":1025},{"width":1025,"height":513},{"width":513,"height":257},{"width":513,"height":257},{"width":513,"height":257},{"width":65537,"height":32769},{"width":65537,"height":32769},{"width":32769,"height":16385},{"width":16385,"height":8193},{"width":8193,"height":4097},{"width":4097,"height":2049},{"width":2049,"height":1025},{"width":2049,"height":1025},{"width":2049,"height":1025}]}
{"entry":"copy","source":"input","target":3,"uniforms":[32769,16385,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[16385,8193,32769,16385,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":5,"uniforms":[8193,4097,16385,8193,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":5,"target":6,"uniforms":[4097,2049,8193,4097,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":7,"uniforms":[2049,1025,4097,2049,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":7,"target":8,"uniforms":[2049,1025,2049,1025,0.00048804294783622026,0,1.4524191617965698,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":8,"target":9,"uniforms":[2049,1025,2049,1025,0,0.0009756097570061684,1.4524191617965698,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":9,"target":2,"uniforms":[65537,32769,2049,1025,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"unsharp","source":2,"target":0,"uniforms":[65537,32769,65537,32769,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":"input"}
{"entry":"color_grade_hsl_key","source":0,"target":10,"uniforms":[65537,32769,65537,32769,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"copy","source":10,"target":12,"uniforms":[32769,16385,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":12,"target":13,"uniforms":[16385,8193,32769,16385,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":13,"target":14,"uniforms":[8193,4097,16385,8193,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":14,"target":15,"uniforms":[4097,2049,8193,4097,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":15,"target":16,"uniforms":[2049,1025,4097,2049,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":16,"target":17,"uniforms":[1025,513,2049,1025,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":17,"target":18,"uniforms":[513,257,1025,513,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":18,"target":19,"uniforms":[513,257,513,257,0.001949317753314972,0,5.10211181640625,16,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":19,"target":20,"uniforms":[513,257,513,257,0,0.0038910505827516317,5.10211181640625,16,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":20,"target":11,"uniforms":[65537,32769,513,257,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":0,"target":1,"uniforms":[65537,32769,65537,32769,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":11}
{"entry":"color_grade_linear","source":1,"target":21,"uniforms":[65537,32769,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":21,"target":23,"uniforms":[32769,16385,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":23,"target":24,"uniforms":[16385,8193,32769,16385,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":24,"target":25,"uniforms":[8193,4097,16385,8193,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":25,"target":26,"uniforms":[4097,2049,8193,4097,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":26,"target":27,"uniforms":[2049,1025,4097,2049,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":27,"target":28,"uniforms":[2049,1025,2049,1025,0.00048804294783622026,0,1.4524191617965698,5,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":28,"target":29,"uniforms":[2049,1025,2049,1025,0,0.0009756097570061684,1.4524191617965698,5,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":29,"target":22,"uniforms":[65537,32769,2049,1025,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_sharpen","source":22,"target":0,"uniforms":[65537,32769,65537,32769,0.8999999761581421,0,0,0,0,0,0,0,0,0,0,0],"original":1,"mask":11}
{"entry":"copy","source":0,"target":"output","uniforms":[65537,32769,65537,32769,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片键控 sigma=0.3 附近：hsl_blur=0.001 1`] = `
"{"width":101,"height":100,"scratch":[{"width":101,"height":100},{"width":101,"height":100},{"width":101,"height":100}]}
{"entry":"color_grade_hsl_key","source":"input","target":2,"uniforms":[101,100,101,100,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"color_grade_hsl_correct","source":"input","target":0,"uniforms":[101,100,101,100,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":2}
{"entry":"copy","source":0,"target":"output","uniforms":[101,100,101,100,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片键控 sigma=0.3 附近：hsl_blur=14.95 1`] = `
"{"width":101,"height":100,"scratch":[{"width":101,"height":100},{"width":101,"height":100},{"width":101,"height":100}]}
{"entry":"color_grade_hsl_key","source":"input","target":2,"uniforms":[101,100,101,100,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"color_grade_hsl_correct","source":"input","target":0,"uniforms":[101,100,101,100,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":2}
{"entry":"copy","source":0,"target":"output","uniforms":[101,100,101,100,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 图片键控 sigma=0.3 附近：hsl_blur=15 1`] = `
"{"width":101,"height":100,"scratch":[{"width":101,"height":100},{"width":101,"height":100},{"width":101,"height":100},{"width":101,"height":100},{"width":101,"height":100}]}
{"entry":"color_grade_hsl_key","source":"input","target":2,"uniforms":[101,100,101,100,0,1,0,0,0,1,0,0,0,1,0,0]}
{"entry":"blur","source":2,"target":4,"uniforms":[101,100,101,100,0.009900989942252636,0,0.30000001192092896,1,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":3,"uniforms":[101,100,101,100,0,0.009999999776482582,0.30000001192092896,1,1,0,0,0,0,0,0,0]}
{"entry":"color_grade_hsl_correct","source":"input","target":0,"uniforms":[101,100,101,100,1.0511451959609985,0.9916463494300842,0.9321475625038147,1,0,0,0,0,0,0,0,0],"original":3}
{"entry":"copy","source":0,"target":"output","uniforms":[101,100,101,100,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 模糊溶解：emptyOutgoing=false, emptyIncoming=false 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":1921,"height":1081},{"width":1921,"height":1081},{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68},{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68}]}
{"entry":"copy","source":"input","target":2,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":5,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":6,"target":7,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":7,"target":0,"uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":"second","target":8,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":8,"target":9,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":9,"target":10,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":10,"target":11,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":11,"target":12,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":12,"target":13,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":13,"target":1,"uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"tr_mix","source":0,"target":"output","uniforms":[1921,1081,1921,1081,0.5,0,0,0,0,0,0,0,0.5,0,0,0],"original":1}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 模糊溶解：emptyOutgoing=false, emptyIncoming=true 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":1921,"height":1081},{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68}]}
{"entry":"copy","source":"input","target":1,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":0,"uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"tr_mix","source":0,"target":"output","uniforms":[1921,1081,1921,1081,0.5,0,0,0,0,0,0,0,0.5,0,1,0],"original":"second"}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 模糊溶解：emptyOutgoing=true, emptyIncoming=false 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":1921,"height":1081},{"width":961,"height":541},{"width":481,"height":271},{"width":241,"height":136},{"width":121,"height":68},{"width":121,"height":68},{"width":121,"height":68}]}
{"entry":"copy","source":"second","target":1,"uniforms":[961,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[481,271,961,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[241,136,481,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":3,"target":4,"uniforms":[121,68,241,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":4,"target":5,"uniforms":[121,68,121,68,0.00826446246355772,0,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"blur","source":5,"target":6,"uniforms":[121,68,121,68,0,0.014705882407724857,1.9643186330795288,6,1,0,0,0,0,0,0,0]}
{"entry":"copy","source":6,"target":0,"uniforms":[1921,1081,121,68,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"tr_mix","source":"input","target":"output","uniforms":[1921,1081,1921,1081,0.5,0,0,0,0,0,0,0,0.5,1,0,0],"original":0}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 模糊溶解：emptyOutgoing=true, emptyIncoming=true 1`] = `
"{"width":1921,"height":1081,"scratch":[]}
{"entry":"tr_mix","source":"input","target":"output","uniforms":[1921,1081,1921,1081,0.5,0,0,0,0,0,0,0,0.5,1,1,0],"original":"second"}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 非整除尺寸单轴高斯：horizontal 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":961,"height":1081},{"width":481,"height":1081},{"width":241,"height":1081},{"width":121,"height":1081},{"width":121,"height":1081}]}
{"entry":"copy","source":"input","target":0,"uniforms":[961,1081,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[481,1081,961,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[241,1081,481,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[121,1081,241,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[121,1081,121,1081,0.00826446246355772,0,1.9643186330795288,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":"output","uniforms":[1921,1081,121,1081,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;

exports[`旧高斯规划逐字段快照（重构前采集，禁止随重构更新） > 非整除尺寸单轴高斯：vertical 1`] = `
"{"width":1921,"height":1081,"scratch":[{"width":1921,"height":541},{"width":1921,"height":271},{"width":1921,"height":136},{"width":1921,"height":68},{"width":1921,"height":68}]}
{"entry":"copy","source":"input","target":0,"uniforms":[1921,541,1921,1081,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":0,"target":1,"uniforms":[1921,271,1921,541,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":1,"target":2,"uniforms":[1921,136,1921,271,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":2,"target":3,"uniforms":[1921,68,1921,136,0,0,0,0,0,0,0,0,0,0,0,0]}
{"entry":"blur","source":3,"target":4,"uniforms":[1921,68,1921,68,0,0.014705882407724857,1.9643186330795288,6,0,0,0,0,0,0,0,0]}
{"entry":"copy","source":4,"target":"output","uniforms":[1921,1081,1921,68,0,0,0,0,0,0,0,0,0,0,0,0]}"
`;
